--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -10,7 +10,7 @@
 # The default key to sign with. If this option is not used, the default key is
 # the first key found in the secret keyring
 
-default-key 0x3AAE8432AEA1D738
+default-key  3AAE8432AEA1D738
 
 #-----------------------------
 # behavior
