Update gnupg configuration (v2 compliant)
Signed-off-by: pacoorozco <paco@pacoorozco.info>

--- a/gnupg/gpg-agent.conf
+++ b/gnupg/gpg-agent.conf
@@ -1,8 +1,9 @@
-# Wait an hour before prompting again, always
-# prompt if it has been 2 hours, regardless most
-# recent use.
-default-cache-ttl 600
-max-cache-ttl 7200
+#
+# Read more about available options here:
+# https://www.mankier.com/1/gpg-agent
+#
+# GPG Agent Configuration
+#
 
 # Use pinentry-curses for prompt.
 pinentry-program /usr/bin/pinentry-curses
