Change default GPG keyserver
Signed-off-by: pacoorozco <paco@pacoorozco.info>

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -24,3 +24,6 @@ personal-compress-preferences BZIP2 ZLIB ZIP Uncompressed
 cert-digest-algo SHA512
 
 default-preference-list AES256 AES192 AES SHA512 SHA384 SHA256 SHA224 BZIP2 ZLIB ZIP Uncompressed
+
+# Use a more reliable keyserver
+keyserver hkps://keyserver.ubuntu.com:443
